...
  return (
    <View testID={testID}>
      {loading ? (
        <Loader />
      ) : (
        <View>
          <Text style={styles.heading} testID="GalleryTitle">
            {title}
          </Text>
          <FlatList
            keyExtractor={item => item.id}
            data={movies}
            horizontal
...
