...
                onPress={() => {
                  Linking.openURL(details?.homepage);
                }}></TouchableOpacity>
            </View>
          ) : null}

          <Text style={styles.heading}>OVERVIEW</Text>
          <Text style={styles.overview}>{details?.overview}</Text>

          <View style={styles.detailsContainer}>
            <View>
              <Text style={styles.heading}>BUDGET</Text>
              <Text style={styles.details}>$ {details?.budget}</Text>
...
